--- a/report/report.tex
+++ b/report/report.tex
@@ -86,11 +86,11 @@
 
 \newcommand{\eqdef}{\overset{\mathrm{def}}{=\joinrel=}}
 
-\title{Lol}
+\title{Variants of vertex-labeled distance oracles in dynamic and static graphs.}
 \subtitle{}
 \author{Nikolaj Dybdahl Rathcke}
 \project{Master's Thesis}
-\supervisor{Supervisors: Christian Wulff-Nilsen}
+\supervisor{Supervisor: Christian Wulff-Nilsen}
 
 \begin{document}
 \begin{titlepage}
@@ -106,7 +106,7 @@
 \pagestyle{fancy}
 \pagenumbering{arabic}
 
-\input{introduction.tex}
+\input{sota.tex}
 
 
 \newpage
