--- a/report/report.tex
+++ b/report/report.tex
@@ -106,8 +106,11 @@
 \pagestyle{fancy}
 \pagenumbering{arabic}
 
+\input{introduction.tex}
+\newpage
+\input{notation.tex}
+\newpage
 \input{sota.tex}
-
 
 \newpage
 \addcontentsline{toc}{section}{References}
