--- a/report/report.bib
+++ b/report/report.bib
@@ -41,3 +41,54 @@
   journal={arXiv preprint arXiv:1708.01386},
   year={2017}
 }
+
+@article{federickson1987fast,
+  title={Fast algorithms for shortest paths in planar graphs, with applications},
+  author={Federickson, Greg N},
+  journal={SIAM Journal on Computing},
+  volume={16},
+  number={6},
+  pages={1004--1022},
+  year={1987},
+  publisher={SIAM}
+}
+
+@inproceedings{miller1984finding,
+  title={Finding small simple cycle separators for 2-connected planar graphs.},
+  author={Miller, Gary L},
+  booktitle={Proceedings of the sixteenth annual ACM symposium on Theory of computing},
+  pages={376--382},
+  year={1984},
+  organization={ACM}
+}
+
+@article{thorup2005approximate,
+  title={Approximate distance oracles},
+  author={Thorup, Mikkel and Zwick, Uri},
+  journal={Journal of the ACM (JACM)},
+  volume={52},
+  number={1},
+  pages={1--24},
+  year={2005},
+  publisher={ACM}
+}
+
+@article{fakcharoenphol2006planar,
+  title={Planar graphs, negative weight edges, shortest paths, and near linear time},
+  author={Fakcharoenphol, Jittat and Rao, Satish},
+  journal={Journal of Computer and System Sciences},
+  volume={72},
+  number={5},
+  pages={868--889},
+  year={2006},
+  publisher={Elsevier}
+}
+
+@inproceedings{klein2005multiple,
+  title={Multiple-source shortest paths in planar graphs},
+  author={Klein, Philip N},
+  booktitle={Proceedings of the sixteenth annual ACM-SIAM symposium on Discrete algorithms},
+  pages={146--155},
+  year={2005},
+  organization={Society for Industrial and Applied Mathematics}
+}
