--- a/report/report.tex
+++ b/report/report.tex
@@ -108,9 +108,11 @@
 
 \input{introduction.tex}
 \newpage
-\input{notation.tex}
+\input{preliminaries.tex}
 \newpage
-\input{sota.tex}
+\input{survey.tex}
+\newpage
+\input{exactPlanar.tex}
 
 \newpage
 \addcontentsline{toc}{section}{References}
