--- a/report/preliminaries.tex
+++ b/report/preliminaries.tex
@@ -1,8 +1,12 @@
-\section{Notation}
-\label{sec:notation}
+\section{Preliminaries}
+\label{sec:preliminaries}
 For a graph $G=(V,E)$ with label set $L$, we define $|V|=n$, $|E|=m$ and $|L|=\ell$. A
 distance $\delta(v,\lambda)$ for a $v\in V$ and $\lambda\in L$ is the distance between
 the node $v$ and the nearest $\lambda$-labeled node. Likewise, we use $\delta(u,v)$ to denote
 the minimal distance between two nodes $u,v\in V$. \\
 We use $Q(v,\lambda)$ or $Q(u,v)$ to denote the queries "What is $\delta(v,\lambda)$?" or
-"What is $\delta(u,v)$?" respectively. 
+"What is $\delta(u,v)$?" respectively.
+
+\subsection{The $r$-division}
+Jordan curve \cite{miller1984finding}
+An $r$-division \cite{federickson1987fast} is 
