--- a/report/report.bib
+++ b/report/report.bib
@@ -42,9 +42,9 @@
   year={2017}
 }
 
-@article{federickson1987fast,
+@article{frederickson1987fast,
   title={Fast algorithms for shortest paths in planar graphs, with applications},
-  author={Federickson, Greg N},
+  author={Frederickson, Greg N},
   journal={SIAM Journal on Computing},
   volume={16},
   number={6},
@@ -91,4 +91,13 @@
   pages={146--155},
   year={2005},
   organization={Society for Industrial and Applied Mathematics}
+}
+
+@inproceedings{klein2013structured,
+  title={Structured recursive separator decompositions for planar graphs in linear time},
+  author={Klein, Philip N and Mozes, Shay and Sommer, Christian},
+  booktitle={Proceedings of the forty-fifth annual ACM symposium on Theory of computing},
+  pages={505--514},
+  year={2013},
+  organization={ACM}
 }
