--- a/report/preliminaries.tex
+++ b/report/preliminaries.tex
@@ -16,8 +16,21 @@ a Jordan curve separator is a curve that intersects $G$ only at vertices. In 198
 separator of size $O(\sqrt{n})$ such that each new component contains at mose $2n/3$
 vertices. He further showed that such a separator can be found in $O(n)$ time. \\
 Frederickson introduced the $r$-division, which is a decomposition of a planar graph into
-$O(n/r)$ pieces, where each piece contains $O(\sqrt{r}$ \textit{boundary vertices}. A
+$O(n/r)$ pieces, where each piece contains $O(\sqrt{r})$ \textit{boundary vertices}. A
 boundary vertex is a vertex that belongs to multiple pieces. This was further developed
 by Klein et al. \cite{klein2013structured}, who gave a $O(n)$ time algorithm to compute
 an $r$-division of a planar graph $G$ with the additional property that each piece has a constant number of \textit{holes}, which are
-faces of a piece that are not faces of $G$.
+faces of a piece that are not faces of $G$. \\
+\\
+\section{Other techniques}
+Klein's multiple source shortest path \cite{klein2005multiple} is useful tool for planar
+graphs. Given a planar graph with nonnegative weight, we can construct a data structure
+of size $O(n \lg n)$ that can answer queries of the following form in $O(\lg n)$ time:
+For a source node $s$ and a node $t$ on the boundary of the infinite face, finde the
+shortest path from $s$ to $t$. This data structure can be constructed in $O(n \lg n)$
+time. TODO: More?\\
+\\
+FR-Djikstra \cite{fakcharoenphol2006planar}\\
+Nearest neighbour searches in $\lg n$ time. \\
+Exploiting Monge property
+
