--- a/report/report.tex
+++ b/report/report.tex
@@ -103,6 +103,8 @@
 \pagestyle{plain}
 \pagenumbering{roman}
 
+\input{abstract.tex}
+\newpage
 \tableofcontents
 \newpage
 
@@ -111,11 +113,11 @@
 
 \input{introduction.tex}
 \newpage
-\input{preliminaries.tex}
-\newpage
-\input{techniques}
+\input{notation.tex}
 \newpage
 \input{survey.tex}
+\newpage
+\input{techniques.tex}
 \newpage
 \input{exactPlanar.tex}
 
