--- a/report/report.bib
+++ b/report/report.bib
@@ -101,3 +101,14 @@
   year={2013},
   organization={ACM}
 }
+
+@article{henzinger1997faster,
+  title={Faster shortest-path algorithms for planar graphs},
+  author={Henzinger, Monika R and Klein, Philip and Rao, Satish and Subramanian, Sairam},
+  journal={journal of computer and system sciences},
+  volume={55},
+  number={1},
+  pages={3--23},
+  year={1997},
+  publisher={Elsevier}
+}
