--- a/report/report.tex
+++ b/report/report.tex
@@ -120,6 +120,8 @@
 \input{techniques.tex}
 \newpage
 \input{exactPlanar.tex}
+\newpage
+\input{conclusion.tex}
 
 \newpage
 \addcontentsline{toc}{section}{References}
