--- a/report/survey.tex
+++ b/report/survey.tex
@@ -38,7 +38,7 @@ probability $\ell^{-1/k}$. We then define the \textit{bunch} of a vertex $v$ as:
 \end{align*}
 TODO: Brief explanation of approach + fig of results (approximate)
 
-\subsection{The planar case}
+\subsection{The planar case}\label{cohenplanar}
 Cohen-Addad et al. \cite{cohen2017fast} introduced a (non vertex-labeled) distance
 oracle in planar digraphs that required subquadratic space and could answer exact distance queries in
 $O(\lg n)$ time. This was the first result to achieve polylogarithmic query time, as previous
