--- a/report/techniques.tex
+++ b/report/techniques.tex
@@ -28,5 +28,5 @@ FR-Djikstra \cite{fakcharoenphol2006planar}\\
 
 
 \subsection{Others?}
-Nearest neighbour searches in $\lg n$ time. \\
+Nearest neighbour searches in expected $\lg n$ time. \\
 
