--- a/report/report.bib
+++ b/report/report.bib
@@ -112,3 +112,21 @@
   year={1997},
   publisher={Elsevier}
 }
+
+@inproceedings{mozes2015efficient,
+  title={Efficient vertex-label distance oracles for planar graphs},
+  author={Mozes, Shay and Skop, Eyal E},
+  booktitle={International Workshop on Approximation and Online Algorithms},
+  pages={97--109},
+  year={2015},
+  organization={Springer}
+}
+
+@inproceedings{li20131+,
+  title={(1+ $\varepsilon$)-Distance Oracles for Vertex-Labeled Planar Graphs},
+  author={Li, Mingfei and Ma, Chu Chung Christopher and Ning, Li},
+  booktitle={International Conference on Theory and Applications of Models of Computation},
+  pages={42--51},
+  year={2013},
+  organization={Springer}
+}
