--- a/report/report.tex
+++ b/report/report.tex
@@ -28,6 +28,7 @@
 \usepackage{wrapfig}
 \usepackage{booktabs}
 \usepackage{xfrac}
+\usepackage{tabularx}
 
 \usepackage[group-separator={,}]{siunitx}
 \sisetup{group-minimum-digits = 3}
