--- a/report/techniques.tex
+++ b/report/techniques.tex
@@ -25,8 +25,8 @@ time. TODO: More?
 FR-Djikstra \cite{fakcharoenphol2006planar}\\
 
 \subsection{Monge property}
+TODO
 
-
-\subsection{Others?}
-Nearest neighbour searches in expected $\lg n$ time. \\
+\subsection{Shortest path trees}
+TODO
 
