--- a/report/survey.tex
+++ b/report/survey.tex
@@ -14,8 +14,8 @@ In their third result, they give an oracle capable of handling label changes. Th
 expected space $O(kn^{1+1/k})$, stretch $(2\cdot3^{k-1}+1)$, query time $O(k)$ and
 handles label changes in $O(kn^{1/k}\lg \lg n)$. \\
 \\
-Chechik \cite{chechik2012improved} improved the latter two results. Namely, he managed to
-reduce the stretch from exponential down to polynomial. He showed two theorems that can
+Chechik \cite{chechik2012improved} improved the latter two results. Namely, she managed to
+reduce the stretch from exponential down to polynomial. She showed two theorems that can
 be stated as follows:
 \begin{thm}\label{chech1}
   There is a vertex-labeled distance oracle
@@ -28,15 +28,8 @@ $\tilde{O}(n^{1/k})$ time with stretch $(4k-5)$ and space $\tilde{O}(n^{1+1/k})$
 \end{thm}
 For Theorem \ref{chech1}, the constructed data structure is similar to that introduced
 by Hermelin et al. \cite{hermelin2011distance} (which in turn is an adaption of the data
-structure given by Thorup and Zwick in \cite{thorup2005approximate}). Given a $k$, we construct the sets
-$A_{k-1} \subseteq A_{k-2} \subseteq \dots \subseteq A_0=V$. For each $i$ where $1\leq i
-\leq k-1$, we construct the set $A_i$ by sampling vertices from $A_{i-1}$ with
-probability $\ell^{-1/k}$. We then define the \textit{bunch} of a vertex $v$ as:
-\begin{align*}
-  B(v)=\bigcup_{i=0}^{k-2} \{u\in A_i \setminus A_{i+1}\ |\ \delta(v,u) < \delta(v,
-  A_{i+1})\}
-\end{align*}
-TODO: Brief explanation of approach + fig of results (approximate)
+structure given by Thorup and Zwick in \cite{thorup2005approximate}). \\
+TODO: fig of results (approximate)
 
 \subsection{The planar case}\label{cohenplanar}
 Cohen-Addad et al. \cite{cohen2017fast} introduced a (non vertex-labeled) distance
@@ -47,8 +40,42 @@ This result was later improved in \cite{gawrychowski2017better} from using $O(n^
 space to $O(n^{3/2})$ space. They also improved the tradeoff for any space $S\in [n,n^2]$.
 That is, for $S\in [n, n^{3/2}]$, they give an oracle with query time
 $\tilde{O}(n^{3/2}/S)$. For $S\in [n^{3/2}, n^2]$, they give an oracle with query time
-$O(\lg n)$. TODO: Survey this article.\\
+$O(\lg n)$. \\
 \\
+TODO:
+\begin{itemize}
+  \item Recursive decomposition using Jordan curves.
+  \item Voronoi diagrams
+  \item Distances stored
+  \item Point location approach
+\end{itemize}
 We give two exact vertex-labeled distance oracles for planar graphs in \ref{exactPlanar}. In
 \ref{techniques} we introduce techniques commonly used in directed planar graphs.
 
+\begin{table}[H]
+  \footnotesize
+  \centering
+  \begin{tabular}{c | c | c | c | c}
+    Reference & Dir. & Preprocessing & Space & Query \\
+    \hline\hline
+    This & D & TODO & $O(n\ell^{2/3})$ & $O(\ell^{1/3})$ \\
+    \hline
+    This & D & TODO & $O(n^{3/2})$ & $O(\text{polylog}(n))$ \\
+    \hline
+    Mozes et al. \cite{mozes2015efficient} & U & $O(\varepsilon^{-2}n\lg^3 n)$ & $O(\varepsilon^{-1}n\lg n)$ &
+    $O(\lg \lg n + \varepsilon^{-1})$ \\
+    \hline
+    Mozes et al. \cite{mozes2015efficient} & D &
+    $O(\varepsilon^{-2}n\lg^3 n\lg (nN))$ & $O(\varepsilon^{-1}n\lg n \lg(nN))$ & $O(\lg
+    \lg n \lg \lg (nN) + \varepsilon^{-1})$ \\
+    \hline
+    Li et al. \cite{li20131+} & U & $O(\varepsilon^{-1}n\lg^2 n)$ & $O(\varepsilon^{-1}n\lg n)$ & $O(\varepsilon^{-1}\lg
+    n \lg \Delta)$
+  \end{tabular}
+  \caption{Results for vertex-labeled distance oracles in planar graph. All results are
+  for connected graphs. All results but those introduced in this thesis are
+$(1+\varepsilon)$ stretch results. The letters 'U' and 'D' is for undirected and directed
+graphs respectively. The 'N' is the maximum arc length and $\Delta$ is the hop-diameter
+of the graph.}
+  \label{planarresults}
+\end{table}
