--- a/report/techniques.tex
+++ b/report/techniques.tex
@@ -21,11 +21,14 @@ For a source node $s$ and a node $t$ on the boundary of the infinite face, find 
 shortest path from $s$ to $t$. This data structure can be constructed in $O(n \lg n)$
 time. TODO: More?
 
+\subsubsection{Monge property}
+
+
 \subsection{FR-Djikstra}
 FR-Djikstra \cite{fakcharoenphol2006planar}\\
-
-\subsection{Monge property}
-TODO
+A \textit{Dense distance graph} or DDG is defined over a decomposition of a planar
+graph. 
+2
 
 \subsection{Shortest path trees}
 TODO
