intro to techs, restructure of survey

--- a/report/introduction.tex
+++ b/report/introduction.tex
@@ -6,7 +6,7 @@ oracle}, which is a data structure that is able to either give exact or approxim
 shortest paths between two nodes quickly while not taking up too much space. They were
 introduced by Thorup and Zwick \cite{thorup2005approximate}. This problem has since been
 extensively studied. However, a variant of this problem
-was introduced by Herminlin et al. \cite{hermelin2011distance}. In the variant, we seek a
+was introduced by Hermelin et al. \cite{hermelin2011distance}. In the variant, we seek a
 compact distance oracle on \textit{vertex-labeled} graphs. For this scenario, each node has a label (e.g. "gas
 station" or "supermarket") and the oracles answer distance queries between a node and a
 label. This generalizes the normal distance oracle problem since when each node is
