--- a/report/report.bib
+++ b/report/report.bib
@@ -141,3 +141,14 @@
   year={1987},
   publisher={ACM}
 }
+
+@article{lipton1979separator,
+  title={A separator theorem for planar graphs},
+  author={Lipton, Richard J and Tarjan, Robert Endre},
+  journal={SIAM Journal on Applied Mathematics},
+  volume={36},
+  number={2},
+  pages={177--189},
+  year={1979},
+  publisher={SIAM}
+}
