--- a/report/report.tex
+++ b/report/report.tex
@@ -90,7 +90,7 @@
 \newcommand{\eqdef}{\overset{\mathrm{def}}{=\joinrel=}}
 \newtheorem{thm}{Theorem}
 
-\title{Variants of vertex-labeled distance oracles in dynamic and static graphs.}
+\title{Exact vertex-labeled distance oracles in static and dynamic planar graphs}
 \subtitle{}
 \author{Nikolaj Dybdahl Rathcke}
 \project{Master's Thesis}
