--- a/report/exactPlanar.tex
+++ b/report/exactPlanar.tex
@@ -14,7 +14,7 @@ depending on $\ell$, we can use the $r$-division alone to show the following:
   There is a distance oracle with space $O(n\ell^{2/3)})$, query time $O(\ell^{1/3})$ and
   preprocessing time $O(n^2/\ell^{1/3})$.
 \end{thm}
-\textit{Data structure}. Given a directed graph $G$ and a number of labels $\ell$, we
+\textit{Data structure}. Given a directed graph $G$, with nonnegative edge lengths and a number of labels $\ell$, we
 construct an $r$-division. Each region $R$ then has at most $r$ nodes and $O(\sqrt{r})$
 boundary nodes. For each boundary node $u$, we store the shortest distance $d(u,\lambda)$
 for all $\lambda \in L$ in a hash table. For all nodes inside $R$, we store the shortest
