--- a/report/techniques.tex
+++ b/report/techniques.tex
@@ -1,4 +1,5 @@
 \section{Techniques for planar graphs}\label{techniques}
+In this section, we describe techniques popularly used for algorithms in planar graphs.
 
 \subsection{Separators in planar graphs}
 A \textit{Jordan curve} is a simple closed curve in the plane. Given a planar graph $G$,
@@ -6,12 +7,14 @@ a Jordan curve separator is a curve that intersects $G$ only at vertices. In 198
 \cite{miller1984finding} showed that for any planar graph with $n$ vertices, there is a Jordan curve
 separator of size $O(\sqrt{n})$ such that each new component contains at most $2n/3$
 vertices. He further showed that such a separator can be found in $O(n)$ time. \\
-Frederickson introduced the \textit{$r$-division}, which is a decomposition of a planar graph into
-$O(n/r)$ pieces, where each piece contains $O(\sqrt{r})$ \textit{boundary vertices}. A
-boundary vertex is a vertex that belongs to multiple pieces. This was further developed
+Frederickson introduced the \textit{$r$-division} for planar
+graphs. Given an $r\in (0,n)$, the division is a decomposition of the graph into
+$O(n/r)$ edge-induced subgraphs (\textit{pieces}), where each piece contains $O(r)$ vertices and $O(\sqrt{r})$ \textit{boundary vertices}. A
+boundary vertex is a vertex that belongs to multiple pieces. Frederickson showed that
+such a division exists for any planar graphs and can be found in $O(n\lg n)$ time. This
+was achieved by applying the separator theorem of Lipton and Tarjan \cite{lipton1979separator}. This was further developed
 by Klein et al. \cite{klein2013structured}, who gave a $O(n)$ time algorithm to compute
-an $r$-division of a planar graph $G$ with the additional property that each piece has a constant number of \textit{holes}, which are
-faces of a piece that are not faces of $G$.
+an $r$-division of a planar graph $G$ with the additional property that each piece has a constant number of \textit{holes}, which are faces of a piece that are not faces of $G$.
 
 \subsection{Klein's multiple source shortest path}
 Klein's multiple source shortest path \cite{klein2005multiple} is useful tool for planar
@@ -21,14 +24,13 @@ For a source node $s$ and a node $t$ on the boundary of the infinite face, find 
 shortest path from $s$ to $t$. This data structure can be constructed in $O(n \lg n)$
 time. TODO: More?
 
-\subsubsection{Monge property}
+\subsection{Monge property}
 
 
 \subsection{FR-Djikstra}
 FR-Djikstra \cite{fakcharoenphol2006planar}\\
 A \textit{Dense distance graph} or DDG is defined over a decomposition of a planar
-graph. 
-2
+graph.
 
 \subsection{Shortest path trees}
 TODO
